--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -41,6 +41,12 @@ guides:
       path: /docs/Guides/AVD/install_RDP_client/
     - title: "Part 2: WEB Access to Azure Virtual Desktop (WVD) workspace (RDP Client)"
       path: /docs/Guides/AVD/AVD_workspace/
+- sectiontitle: Markdown syntax
+  section:
+    - title: "Part 1: Run docker containers project "
+      path: /docs/Guides/AVD/install_RDP_client/
+    - title: "Part 2: Markdown syntax"
+      path: /docs/Guides/AVD/AVD_workspace/
 configuration:
   - title: Configuration
     path: /docs/Configuration
