--- a/_config_production.yml
+++ b/_config_production.yml
@@ -8,7 +8,7 @@
 exclude: ["_scripts", "404.html", "index.html"]
 
 # Google Analytics, etc.
-google_analytics: GTM-WL2QLG5
+google_analytics: G-V9CJQJRYMC
 polldaddy_id:     8453675
 
 # Enable search autocompletion (requires metadata.json to be generated)
