--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -29,6 +29,8 @@ guides:
         path: /docs/Guides/3CX_User_Guide/3CX_User_Manual/
       - title: "Part 2: Manager Manual"
         path: /docs/Guides/3CX_User_Guide/3CX_User_Manager/
+      - title: "Part 3: 3CX Web Client - One Stop for All Communications"
+        path: /docs/Guides/3CX_User_Guide/3CX_Web_Client/
   - sectiontitle: Android enrolment
     section:
       - title: "Bring your own devices"
