--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -28,6 +28,10 @@ guides:
       - title: "Part 1: User Manual"
         path: /docs/Guides/3CX_User_Guide/3CX_User_Manual/
       - title: "Part 2: Manager Manual"
+#     - sectiontitle: Previous versions
+#       section:
+#          - path: /desktop/mac/release-notes/3.x/
+#            title: Desktop for Mac 3.x
         path: /docs/Guides/3CX_User_Guide/3CX_User_Manager/
       - title: "Part 3: 3CX Web Client - One Stop for All Communications"
         path: /docs/Guides/3CX_User_Guide/3CX_Web_Client/
