--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -31,6 +31,8 @@ guides:
     section:
       - title: "Adding M365 User"
         path: /docs/Guides/3CX_Admin_Guide/3CX_Add_M365_User/
+      - title: "3CX Phone Troubleshooting"
+        path: /docs/Guides/3CX_Admin_Guide/3CX_Phone_Troubleshooting/
   - sectiontitle: 3CX User Guide
     section:
       - title: "Part 1: User Manual"
